Addess some deprecation warnings